objects/amc__Checklist_Item__c.object
<CustomObject>
    <description>Enables the ability to track various key items that need to be completed as part of an Action. It will serve as a simple ‘Checklist’ of items that need to be ticked off.</description>
    <fields>
        <fullName>amc__Action_Name__c</fullName>
        <formula>amc__Action__r.amc__Action_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: References the Action Name from the Action this Checklist Item relates to</inlineHelpText>
        <label>Action Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the Action record that this Checklist Item relates to</description>
        <inlineHelpText>Links to the Action record that this Checklist Item relates to</inlineHelpText>
        <label>Action</label>
        <referenceTo>amc__Action__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Checklist_Item_Notes_RT__c</fullName>
        <inlineHelpText>Detailed Notes about the Checklist Item</inlineHelpText>
        <label>Checklist Item Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Complete_Count__c</fullName>
        <description>Used by trigger to assist in rolling up completed checkboxes</description>
        <formula>if(amc__Complete__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the Checklist Item has been completed</description>
        <inlineHelpText>Identifies the Checklist Item has been completed</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__End_Date__c</fullName>
        <description>Identifies the End Date of the Checklist Item</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Client_Page_Indicator__c</fullName>
        <formula>OR( amc__Exclude_from_Client_Page__c,  amc__Action__r.amc__Exclude_from_Client_Page_Indicator__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Identifies if this Checklist Item should be excluded from the Client Overview Page</inlineHelpText>
        <label>Exclude from Client Page Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Client_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Checklist Item should be excluded from the Client Overview Page</inlineHelpText>
        <label>Exclude from Client Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Gantt_Indicator__c</fullName>
        <formula>IF(  amc__Action__r.amc__Exclude_from_Gantt__c = TRUE , TRUE ,  amc__Exclude_from_Gantt__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Identifies whether this Checklist Item should be hidden from the Gantt Chart</inlineHelpText>
        <label>Exclude from Gantt Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Gantt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies whether this Checklist Item should be hidden from the Gantt Chart</inlineHelpText>
        <label>Exclude from Gantt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Status_Report_Indicator__c</fullName>
        <formula>If(amc__Action__r.amc__Exclude_from_Status_Report_Indicator__c = TRUE, TRUE, amc__Exclude_from_Status_Report__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if this Checklist Item should be excluded from the Project Status Report. Will be TRUE if either Checklist Item or parent Action is set to TRUE</inlineHelpText>
        <label>Exclude from Status Report Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Status_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Checklist Item should be excluded from the Project Status Report</inlineHelpText>
        <label>Exclude from Status Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Billable__c</fullName>
        <inlineHelpText>Identifies the billable hours that have been associated to this Checklist Item from Time Logs</inlineHelpText>
        <label>Hours Completed - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the non billable hours that have been associated to this Checklist Item from Time Logs</inlineHelpText>
        <label>Hours Completed - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Billable__c</fullName>
        <formula>If(amc__Complete__c = TRUE, 0, amc__Hours_Scheduled_Billable__c - amc__Hours_Completed_Billable__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If Completed = TRUE, then 0, otherwise &apos;Hours Scheduled - Billable&apos; - &apos;Hours Completed - Billable&apos;</inlineHelpText>
        <label>Hours Remaining - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Non_Billable__c</fullName>
        <formula>If(amc__Complete__c = TRUE, 0, amc__Hours_Scheduled_Non_Billable__c - amc__Hours_Completed_Non_Billable__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If Completed = TRUE, then 0, otherwise &apos;Hours Scheduled - Non Billable&apos; - &apos;Hours Completed - Non Billable&apos;</inlineHelpText>
        <label>Hours Remaining - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Billable__c</fullName>
        <inlineHelpText>Identifies the billable hours scheduled to this Checklist Item</inlineHelpText>
        <label>Hours Scheduled - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the non billable hours scheduled to this Checklist Item</inlineHelpText>
        <label>Hours Scheduled - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Item_Owner_Current_User__c</fullName>
        <formula>IF(  amc__Item_Owner__r.amc__User__r.Id = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays 1 if the current user is the Item Owner, otherwise displays 0</inlineHelpText>
        <label>Item Owner Current User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Item_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the Role record of the person responsible for this Checklist Item</description>
        <inlineHelpText>Links to the Role record of the person responsible for this Checklist Item</inlineHelpText>
        <label>Item Owner</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__KPI_Total_Hours_Variance__c</fullName>
        <formula>amc__Total_Hours_Scheduled__c - (amc__Total_Hours_Completed__c + amc__Total_Hours_Remaining__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates Total Hours Scheduled - (Total Hours Completed + Total Hours Remaining)</inlineHelpText>
        <label>KPI: Total Hours Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Name__c</fullName>
        <formula>amc__Action__r.amc__Milestone__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: References the Milestone Name that the Action this Checklist Item relate to is part of</inlineHelpText>
        <label>Milestone Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Notes__c</fullName>
        <description>Identifies the detailed notes explaining what needs to be achieved as part of this Checklist Item</description>
        <inlineHelpText>Identifies the detailed notes explaining what needs to be achieved as part of this Checklist Item</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amc__Project_Name__c</fullName>
        <formula>amc__Action__r.amc__Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: References the Project Name that the Action this Checklist Item relate to is part of</inlineHelpText>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Requirement record this Checklist Item relates to</inlineHelpText>
        <label>Requirement</label>
        <referenceTo>amc__Requirement__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Sort_Order__c</fullName>
        <description>Used to determine sort order on the Gantt Chart</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Start_Date__c</fullName>
        <description>Identifies the Start Date of the Checklist Item</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Completed__c</fullName>
        <formula>amc__Hours_Completed_Billable__c + amc__Hours_Completed_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: &apos;Hours Completed - Billable&apos; + &apos;Hours Completed - Non Billable&apos;</inlineHelpText>
        <label>Total Hours Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Remaining__c</fullName>
        <formula>amc__Hours_Remaining_Billable__c + amc__Hours_Remaining_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: &apos;Hours Remaining - Billable&apos; + &apos;Hours Remaining - Non Billable&apos;</inlineHelpText>
        <label>Total Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Scheduled__c</fullName>
        <formula>amc__Hours_Scheduled_Billable__c + amc__Hours_Scheduled_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: &apos;Hours Scheduled - Billable&apos; + &apos;Hours Scheduled - Non Billable&apos;</inlineHelpText>
        <label>Total Hours Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies which User Story this Checklist Item relates to</inlineHelpText>
        <label>User Story</label>
        <referenceTo>amc__User_Story__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Checklist Item</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>amc__My_Checklist_Items_ToDo</fullName>
        <columns>NAME</columns>
        <columns>amc__Complete__c</columns>
        <columns>amc__Action__c</columns>
        <columns>amc__Notes__c</columns>
        <columns>amc__Item_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Item_Owner_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Checklist Items ToDo</label>
    </listViews>
    <nameField>
        <label>Checklist Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>amc__End_Date_Validation</fullName>
        <active>true</active>
        <description>The End Date must be greater or equal to the Start Date</description>
        <errorConditionFormula>amc__Start_Date__c &gt; amc__End_Date__c</errorConditionFormula>
        <errorDisplayField>amc__End_Date__c</errorDisplayField>
        <errorMessage>The End Date must be greater or equal to the Start Date</errorMessage>
    </validationRules>
</CustomObject>